--- a/public/templates/views/home.hbs
+++ b/public/templates/views/home.hbs
@@ -25,43 +25,9 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white;">
-      <div class="container-fluid">
-        
-        <img src="/assets/imgs/JumbotailLogo.png" alt="jumbotail_logo" style="height: 40px ; width: auto ;">
-      
-      
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="javascript:void(0)" onclick="homeRouter()">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="javascript:void(0)" onclick="geoFenceRouter()">GeoFence</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="javascript:void(0)" onclick="geoRouteRouter()">GeoRoute</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Rajat
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="javascript:void(0)" onclick="logout()">Logout</a></li>
-              </ul>
-            </li>
-          </ul>
-          
-        </div>
-      </div>
-      
-    </nav>
+    {{>navbar}}
 
-    <!-- Vertically centered modal -->
+    
     <div class="modal hide" id='infoModal1'>
 <div class="modal-dialog modal-dialog-centered">
   <div class="modal-dialog">
